# intelligent_logistics_car

./: .gitignore  .gitmodules  README.md  batping.sh  ip.txt
logistics_ws/src/: README.md~
logistics_ws/src/ant_math/: CMakeLists.txt
logistics_ws/src/driver/: CMakeLists.txt
logistics_ws/src/串口调试助手/: virtual_com.py
src/: job_record  recorder  大疆雷达livox使用说明文档.docx
src/ant_math/: CMakeLists.txt
src/ant_math/src/: ant_math.cpp  ant_math_back.cpp
src/av_console/: CMakeLists.txt  mainpage.dox  package.xml
src/av_console/av_console_app/: README.md  av_console.desktop  flush.sh  install.sh
src/av_console/cmd/: cmd.xml
src/av_console/debug/: makefile  path_points.txt  xml.cpp
src/av_console/include/: globalvariables.hpp  imageswitch.hpp  main_window.hpp  qnode.hpp  recorddata.hpp  recordpath.hpp  structs.hpp  utils.hpp
src/av_console/newtaskdialog/: newtaskdialog.cpp  newtaskdialog.h  newtaskdialog.ui
src/av_console/resources/: images.qrc
src/av_console/scripts/: generate_curvature.py
src/av_console/src/: globalvariable.cpp  imageswitch.cpp  main.cpp  main_window.cpp  qnode.cpp  recorddata.cpp  recordpath.cpp
src/av_console/ui/: main_window.ui
src/driver/: CMakeLists.txt
src/driver/driver/: package.xml
src/driver/launch/: README.md  calibrate_gps.launch  gps_path_record.launch  listen_stm.launch  listen_stm_sim.launch  path_recorder.launch  path_track.launch  path_track.launch~  path_track_back.launch  path_track_forward.launch  pc_stm.launch  pc_talk_stm.launch  slam_gps_back.launch  slam_gps_forward.launch  slam_gps_record.launch  talk_pc.launch  talk_stm _sim.launch  talk_stm.launch  talk_stm.launch~  temp_back.launch  temp_go.launch  temp_record.launch  try.launch~
src/driver/pc_stm/pc_stm32/: CMakeLists.txt  package.xml
src/driver/pc_stm/pc_stm32/src/: pc_stm.h  pc_stm32.cpp
src/driver/planning/: CMakeLists.txt
src/driver/record/: package.xml
src/driver/ui/: av_console.desktop
src/driverless/: CMakeLists.txt  package.xml
src/driverless/action/: DoDriverlessTask.action
src/driverless/config/: vehicle_params.yaml
src/driverless/include/driverless/: auto_drive_base.h  avoiding.h  car_following.h  driverless_node.h  parking_points_handler.h  path_tracking.h  reverse_drive.h  structs.h  utils.hpp
src/driverless/include/driverless/extern_control/: extern_control.h  extern_control_base.hpp
src/driverless/include/driverless/extern_control/lan_control/: lan_extern_control.hpp
src/driverless/include/driverless/extern_control/wan_control/: joy_stick.h  steering_guidance.hpp  wan_extern_control.hpp
src/driverless/include/driverless/path_planning/: path_planning.h  path_planning_base.hpp
src/driverless/include/driverless/path_planning/pure_tracking/: pure_tracking.hpp
src/driverless/include/driverless/path_tracking/: path_tracking.h  path_tracking_base.hpp
src/driverless/include/driverless/path_tracking/pure_tracking/: pure_tracking.hpp
src/driverless/launch/: driver.launch  driverless.launch  offline.launch  usb_cam.launch
src/driverless/msg/: State.msg  TrackingState.msg
src/driverless/src/: Untitled Document  actionlib_client.cpp  auto_drive_base.cpp  avoiding.cpp  car_following.cpp  choose_road.cpp  driverless_fun.cpp  driverless_node.cpp  extern_control.cpp  other_function.cpp  path_planning.cpp  path_tracking.cpp  reverse_drive.cpp
src/driverless_common/: CMakeLists.txt  package.xml
src/driverless_common/action/: DoDriverlessTask.action  DoReverse.action
src/driverless_common/include/driverless_common/: structs.h
src/driverless_common/msg/: SystemState.msg  VehicleCtrlCmd.msg  VehicleState.msg
src/driverless_common/src/: example.cpp
src/gps_driver/daoyuan/: CMakeLists.txt  package.xml
src/gps_driver/daoyuan/include/daoyuan/: daoyuan.h
src/gps_driver/daoyuan/launch/: ceshi.launch
src/gps_driver/daoyuan/src/: daoyuan.cpp
src/gps_driver/gps_msgs/: CMakeLists.txt
src/gps_driver/novatel/: CMakeLists.txt  README2.md
src/lidar_detect/euclidean_cluster/: CMakeLists.txt
src/lidar_detect/euclidean_cluster/include/: euclidean_cluster_core.h
src/lidar_detect/euclidean_cluster/launch/: euclidean_cluster.launch
src/lidar_detect/euclidean_cluster/src/: euclidean_cluster_core.cpp  euclidean_cluster_node.cpp
src/lidar_detect/lidar_detect/: CMakeLists.txt
src/lidar_detect/lidar_ground_filter/: package.xml
src/livox/: .~lock.livox.docx#
src/livox/lidar_detect/cluster/: CMakeLists.txt  package.xml
src/livox/lidar_detect/cluster/src/: main.cpp
src/logistics_msgs/: CMakeLists.txt
src/logistics_msgs/msg/: GoalState.msg  GoalState.msg~  RealState.msg
src/logistics_ui/: CMakeLists.txt  mainpage.dox  package.xml
src/logistics_ui/src/: main.cpp  main_window.cpp  qnode.cpp
src/lslidar_c16/: README.md
src/math_function/: CMakeLists.txt  package.xml
src/msgs/ant_msgs/: CMakeLists.txt  package.xml
src/msgs/logistics_msgs/: CMakeLists.txt  package.xml
src/msgs/pathplan_msgs/: CMakeLists.txt  package.xml
src/pc_stm/pc_stm32/: CMakeLists.txt  CMakeLists.txt~
src/planning/: CMakeLists.txt  package.xml
src/planning/include/planning/: pathtrack.h~
src/planning/src/: path_track.cpp  path_track.cpp~  path_track.h  path_track_back.cpp  path_tracking.cpp
src/pub_odom/: CMakeLists.txt  package.xml
src/pub_odom/src/: odom_pub.cpp
src/record/: CMakeLists.txt
src/record/data/: plot.py
src/record/src/: record_path.cpp  record_path.h
src/recorder/: CMakeLists.txt  datapath.txt  package.xml
src/recorder/data/: .gitignore  path.txt  path.txt~  plot.py
src/recorder/src/: calibrate_gps.cpp  record_path.cpp
src/rtk/src/: rtk_node.cpp
src/sensor/gps/nuogeng/: CMakeLists.txt  package.xml
src/sensor/gps/nuogeng/launch/: record_path.launch
src/sensor/gps/nuogeng/src/: record_gps_satellite.cpp
src/ui/: copy.sh  install.desktop  install_CH.sh  install_EN.sh  libglib-2.0.so.0  libgobject-2.0.so.0  smartcar  smartcar.desktop  smartcar.sh
src/ui/build-smartcar-Desktop-Release/: Makefile  moc_mainwindow.cpp  ui_mainwindow.h
src/ui/gui/: config.sh
src/virtual_com/: virtual_com.py
(+123 files in other folders)
