<?xml version="1.0"?>
<package format="2">
  <name>driverless</name>
  <version>0.0.0</version>
  <description>The driverless package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="wuconglei@todo.todo">wuconglei</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib_msgs</build_depend>
<!--  <build_depend>diagnostic_msgs</build_depend>-->
  <build_depend>gps_msgs</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>ant_msgs</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pathplaning_msgs</build_depend>
  <build_depend>driverless_common</build_depend>

  <build_export_depend>actionlib_msgs</build_export_depend>
<!--  <build_export_depend>diagnostic_msgs</build_export_depend>-->
  <build_export_depend>gps_msgs</build_export_depend>
  <build_export_depend>jsk_recognition_msgs</build_export_depend>
  <build_export_depend>ant_msgs</build_export_depend>
  <build_export_depend>message_filters</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <build_export_depend>sensor_msgs</build_export_depend>
  <build_export_depend>image_transport</build_export_depend>
  <build_export_depend>cv_bridge</build_export_depend>
  <build_export_depend>pathplaning_msgs</build_export_depend>
  <build_export_depend>driverless_common</build_export_depend>
  
  <exec_depend>actionlib_msgs</exec_depend>
<!--  <exec_depend>diagnostic_msgs</exec_depend>-->
  <exec_depend>gps_msgs</exec_depend>
  <exec_depend>jsk_recognition_msgs</exec_depend>
  <exec_depend>ant_msgs</exec_depend>
  <exec_depend>message_filters</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pathplaning_msgs</exec_depend>
  <exec_depend>driverless_common</exec_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
